页面框架、调试

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,8 @@
     "dependencies": {
         "react": "latest",
         "babel": "latest",
-        "babel-standalone": "latest"
+        "babel-standalone": "latest",
+        "jquery": "latest",
+        "semantic-ui": "latest"
     }
 }
